--- a/html/contact.html
+++ b/html/contact.html
@@ -51,8 +51,10 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="/Algarve-WebCraft/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <a href="index.html">
+              <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+              <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            </a>
           </div>
 
           <nav class="nav-bar">
@@ -126,7 +128,7 @@
       <section class="pg5-s1-contact transition-reverse-slide" aria-labelledby="s1-contact">
         <div class="wrapper wrapper--mobile-S">
 
-          <svg class="decorative-side-svg decorative-side-svg--pg5-s1" viewBox="0 0 512 542" aria-hidden="true">
+          <svg class="decorative-side-svg decorative-side-svg--pg5-s1" viewBox="0 0 530 512" aria-hidden="true">
             <defs>
               <filter id="svg-drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
                 <feDropShadow dx="10" dy="10" stdDeviation="7" flood-color="#0065ca" flood-opacity="1" />
