--- a/html/privacy.html
+++ b/html/privacy.html
@@ -51,8 +51,10 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <a href="index.html">
+              <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+              <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            </a>
           </div>
 
           <nav class="nav-bar">
@@ -236,18 +238,18 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="..assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
+              <img src="assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
+              <a class="cmp-main-btn-footer" href="html/contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
               <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">Who We Are</a></li>
-                <li><a href="./services.html">What We Offer</a></li>
-                <li><a href="./pricing.html">Our Prices</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="html/about.html">Who We Are</a></li>
+                <li><a href="html/services.html">What We Offer</a></li>
+                <li><a href="html/pricing.html">Our Prices</a></li>
               </ul>
             </div>
 
@@ -280,9 +282,9 @@
             </div>
 
             <div>
-              <a href="./privacy.html"><strong>Privacy Policy</strong></a>
+              <a href="html/privacy.html"><strong>Privacy Policy</strong></a>
               <span>|</span>
-              <a href="./terms.html"><strong>Terms of Use</strong></a>
+              <a href="html/terms.html"><strong>Terms of Use</strong></a>
             </div>
           </div>
 
