--- a/html/about.html
+++ b/html/about.html
@@ -61,8 +61,10 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <a href="index.html">
+              <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+              <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            </a>
           </div>
 
           <nav class="nav-bar">
@@ -144,11 +146,11 @@
             <div class="who-text-block">
               <span class="cmp-topper-heading">Algarve Webcraft</span>
               <h2 class="cmp-sub-heading" id="s1-who">A small website business from a small coastal town</h2>
-              <p class="cmp-main-text">Hi, I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
+              <p class="cmp-main-text">I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
 
-              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="html/contact.html">Contact Us</a>
+              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pages" href="html/contact.html">Contact Us</a>
             </div>
             <div class="who-image-block">
               <picture>
@@ -172,7 +174,7 @@
       <!--------------------------------------- PAGE 2 / SECTION-TWO / PORTFOLIO ----------------------------------->
       <!------------------------------------------------------------------------------------------------------------>
 
-      <section class="pg1-s4-portfolio transition-reverse-slide" aria-labelledby="s2-portfolio">
+      <section class="pg1-s4-portfolio pg2-s2-portfolio transition-reverse-slide" aria-labelledby="s2-portfolio">
         <div class="wrapper wrapper--mobile-L">
 
           <span class="cmp-topper-heading">Our Portfolio</span>
@@ -202,7 +204,7 @@
             </div>
           </div>
 
-          <p class="cmp-topper-heading cmp-topper-heading--pg1-s4">Click on an image to view the website</p>
+          <p class="cmp-topper-heading cmp-topper-heading--pg2-s2">Click on an image to view the website</p>
         </div>
       </section>
 
@@ -212,14 +214,17 @@
 
       <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3 transition-reverse-slide" aria-labelledby="s3-testimonials">
         <div class="wrapper">
-          <span class="cmp-topper-heading cmp-topper-heading--pg2-s2">Our Testimonials</span>
+          <span class="cmp-topper-heading">Our Testimonials</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6" id="s3-testimonials">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
 
-          <svg class="decorative-side-svg decorative-side-svg--testimonials" viewBox="0 0 512 512" aria-hidden="true">
-            <path style="fill:#001f3f;" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
-            <path style="fill:#001f3f;" d="M256,477.323c-5.633,0-10.199-4.566-10.199-10.199c0-5.633,4.566-10.199,10.199-10.199 c38.724,0,76.315-11.037,108.706-31.915c4.736-3.052,11.047-1.687,14.098,3.047c3.052,4.734,1.688,11.047-3.046,14.098 C340.064,465.161,298.652,477.323,256,477.323z"></path>
-            <path style="fill:#001f3f;" d="M399.811,420.771c-2.733,0-5.459-1.091-7.468-3.249c-3.838-4.122-3.607-10.577,0.515-14.415 c2.223-2.069,4.421-4.21,6.535-6.363c3.947-4.02,10.404-4.079,14.424-0.134c4.02,3.946,4.08,10.403,0.134,14.424 c-2.326,2.37-4.747,4.726-7.192,7.004C404.794,419.867,402.299,420.771,399.811,420.771z"></path>
+          <svg class="decorative-side-svg decorative-side-svg--testimonials" viewBox="0 0 530 512" aria-hidden="true">
+            <defs>
+              <filter id="svg-drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
+                <feDropShadow dx="10" dy="10" stdDeviation="7" flood-color="#0065ca" flood-opacity="1" />
+              </filter>
+            </defs>
+            <path filter="url(#svg-drop-shadow)" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
           </svg>
 
           <div class="glide" aria-roledescription="carousel" aria-describedby="carousel-instructions">
