--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <a href="index.html">
+              <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+              <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            </a>
           </div>
 
           <nav class="nav-bar">
@@ -126,11 +128,11 @@
         <div class="wrapper pg1-hero__flex">
 
           <div class="hero__text-container transition-reverse-slide">
-            <span class="cmp-topper-heading topper-heading--pg1-hero">Tailored Designs. Hand-crafted Code.</span>
+            <span class="cmp-topper-heading cmp-topper-heading--pg1-hero">Tailored Designs. Hand-crafted Code.</span>
             <h1 id="hero-heading" class="cmp-main-heading">Small Business Website Specialist</h1>
             <p class="hero-text">100% hand-crafted websites with guaranteed superior results – from only €85 /month with optional social media management. No Ai, WordPress, Wix (or any other page builders) are used.</p>
-            <a class="cmp-main-btn main-btn--pg1-hero cmp-main-btn--light" href="html/contact.html">Start Now</a>
-            <a class="cmp-main-btn main-btn--pg1-hero" href="html/about.html">ABOUT US</a>
+            <a class="cmp-main-btn cmp-main-btn--pg1-hero cmp-main-btn--light" href="html/contact.html">Start Now</a>
+            <a class="cmp-main-btn cmp-main-btn--pg1-hero" href="html/about.html">ABOUT US</a>
           </div>
 
           <div class="hero__image-main-container">
