--- a/html/contact.html
+++ b/html/contact.html
@@ -140,7 +140,7 @@
           <div>
             <span class="cmp-topper-heading">Contact</span>
             <h2 class="cmp-sub-heading cmp-sub-heading--pg5-s1" id="s1-contact">Reach out to us</h2>
-            <p class="cmp-main-text main-text--pg5-s1">Get in touch with us by email or send us a message on WhatsApp. Let us know what you are looking for in your new website and what your business goals are. We reply to every message within 24 hours and we would love to chat about how we can bring your ideas to life.<br><br> Speak soon,<br> <span>The Algarve WebCraft Team</span></p>
+            <p class="cmp-main-text main-text--pg5-s1">Get in touch with us by email or send us a message on WhatsApp. Let us know what you are looking for in your new website and what your business goals are. We reply to every message within 24 hours and we would love to chat about how we can bring your ideas to life!</p>
           </div>
 
           <div class="contact-page-contact-box">
