--- a/html/pricing.html
+++ b/html/pricing.html
@@ -125,7 +125,7 @@
         </svg>
       </div>
 
-      <section class="pg1-s5-pricing pg1-s5-pricing--pg4-s1 transition-reverse-slide" aria-labelledby="s1-pricing">
+      <section class="pg4-s1-pricing transition-reverse-slide" aria-labelledby="s1-pricing">
         <div class="wrapper wrapper--mobile-L">
           <span class="cmp-topper-heading cmp-topper-heading--pg4-s1">Our Pricing</span>
           <h2 class="cmp-sub-heading" id="s1-pricing">Affordable Packages for Any Business</h2>
