--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="text-block-container">
               <div class="text-block-container__main-text">
                 <span class="cmp-topper-heading">Our approach</span>
-                <h2 class="cmp-sub-heading" id="s1-approach">Professional Web Design for Just €85/Month with <span class="approach-fees-heading-span">no Upfront Fees</span></h2>
+                <h2 class="cmp-sub-heading" id="s1-approach">Professional Web Design for only €85/Month with <span class="approach-fees-heading-span">no Upfront Fees</span></h2>
                 <p class="cmp-main-text cmp-main-text--pg1-s1">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more (or less) than the basics? We will give you a fair, custom quote based on your exact needs.</p>
                 <p class="cmp-main-text cmp-main-text--pg1-s1">The monthly plan comes with a <strong>6-month minimum contract</strong>, and includes everything: custom design, development, hosting, lifetime updates, round-the-clock support, and unlimited small edits. For larger edits or new add-ons, we may charge a small fee depending on the size of the request.</p>
               </div>
