--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <picture>
               <source srcset="assets/images/page-score-l.webp" media="(min-width: 768px)" type="image/webp">
               <source srcset="assets/images/page-score-s.webp" media="(max-width: 767px)" type="image/webp">
-              <img src="assets/images/page-score.jpg" alt="A screenshot of a performance chart for a website showing 100% score across all website metrics (Performance, Accessiblity, Best Practices and SEO)." width="506px" height="674px" loading="lazy" decoding="async">
+              <img src="assets/images/page-score.jpg" width="600px" height="500px" loading="lazy" decoding="async" alt="A screenshot of a performance chart for a website showing 100% score across all website metrics (Performance, Accessiblity, Best Practices and SEO).">
             </picture>
           </div>
 
@@ -513,7 +513,7 @@
                 </li>
 
                 <li>
-                  <p><span>+€50 per page - </span> After 5 Pages</p>
+                  <p><span>+€50 once-off per page - </span> After 5 Pages</p>
                   <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
                     <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
                   </svg>
@@ -586,7 +586,7 @@
                 </li>
 
                 <li>
-                  <p><span>+€50 per page - </span> After 5 Pages</p>
+                  <p><span>+€50 once-off per page - </span> After 5 Pages</p>
                   <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
                     <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
                   </svg>
