--- a/html/pricing.html
+++ b/html/pricing.html
@@ -166,7 +166,7 @@
                 </li>
 
                 <li>
-                  <p><span>+€50 per page - </span> After 5 Pages</p>
+                  <p><span>+€50 once-off per page - </span> After 5 Pages</p>
                   <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
                     <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
                   </svg>
@@ -239,7 +239,7 @@
                 </li>
 
                 <li>
-                  <p><span>+€50 per page - </span> After 5 Pages</p>
+                  <p><span>+€50 once-off per page - </span> After 5 Pages</p>
                   <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
                     <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
                   </svg>
