--- a/html/pricing.html
+++ b/html/pricing.html
@@ -15,7 +15,7 @@
         }
       })();
     </script>
-     <base href="/Algarve-WebCraft/">
+    <base href="/Algarve-WebCraft/">
     <link rel="icon" href="assets/logos/favicon-logo.ico" type="image/x-icon">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
@@ -33,9 +33,10 @@
     <link rel="stylesheet" href="css/style-pages.css">
     <link rel="preload" href="css/dark-mode.css" as="style">
     <link rel="stylesheet" href="css/dark-mode.css">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script src="js/swup.js" defer></script>
     <script src="js/gsap.min.js"></script>
+    <script src="js/scrolltrigger.min.js"></script>
+    <script src="js/swup.js" defer></script>
+    <script type="module" src="js/glide.min.js" defer></script>
     <script type="module" src="js/script.js" defer></script>
     <noscript>
       <link rel="stylesheet" href="css/style.css">
@@ -125,21 +126,23 @@
         </svg>
       </div>
 
-      <section class="pg4-s1-pricing transition-reverse-slide" aria-labelledby="s1-pricing">
+      <section class="pg4-s1-pricing" aria-labelledby="s1-pricing">
         <div class="wrapper wrapper--mobile-L">
-          <span class="cmp-topper-heading cmp-topper-heading--pg4-s1">Our Pricing</span>
-          <h2 class="cmp-sub-heading" id="s1-pricing">Affordable Packages for Any Business</h2>
-          <p class="cmp-main-text cmp-main-text--pg4-s1">We offer two simple options for your small business website:</p>
-          <p class="cmp-main-text cmp-main-text--pg4-s1">The first is a one-time payment where the website is yours to keep. We can either host it for you (for a small ongoing fee), or hand over the full files so you can manage hosting yourself and use the site however you like.</p>
-          <p class="cmp-main-text cmp-main-text--pg4-s1">The second option is our monthly plan which comes with a <strong>6-month minimum contract</strong> and includes hosting, ongoing support and regular updates, all bundled together. One of the best parts? <strong>The price you start with is the price you will always pay</strong>, for as long as you stay on the plan. Even when our prices go up in the future, your price will never change.</p>
-          <p class="cmp-main-text cmp-main-text--pg4-s1"><span>Please note:</span> if you decide to cancel the monthly plan, the website files are not included (as everyone would just cancel after the six months, making it pointless to offer in the first place). If you choose to rejoin later, it would be at the current pricing at that time.</p>
+          <div class="transition-reverse-slide">
+            <span class="cmp-topper-heading cmp-topper-heading--pg4-s1">Our Pricing</span>
+            <h2 class="cmp-sub-heading" id="s1-pricing">Affordable Packages for Any Business</h2>
+          </div>
+          <p class="cmp-main-text cmp-main-text--pg4-s1" data-animate="slide-left">We offer two simple options for your small business website:</p>
+          <p class="cmp-main-text cmp-main-text--pg4-s1" data-animate="slide-left">The first is a one-time payment where the website is yours to keep. We can either host it for you (for a small ongoing fee), or hand over the full files so you can manage hosting yourself and use the site however you like.</p>
+          <p class="cmp-main-text cmp-main-text--pg4-s1" data-animate="slide-left">The second option is our monthly plan which comes with a <strong>6-month minimum contract</strong> and includes hosting, ongoing support and regular updates, all bundled together. One of the best parts? <strong>The price you start with is the price you will always pay</strong>, for as long as you stay on the plan. Even when our prices go up in the future, your price will never change.</p>
+          <p class="cmp-main-text cmp-main-text--pg4-s1" data-animate="slide-left"><span>Please note:</span> if you decide to cancel the monthly plan, the website files are not included (as everyone would just cancel after the six months, making it pointless to offer in the first place). If you choose to rejoin later, it would be at the current pricing at that time.</p>
 
-          <svg class="pricing-page-svg-decoration" viewBox="0 0 273.835 273.835">
+          <svg class="pricing-page-svg-decoration" viewBox="0 0 273.835 273.835" data-animate="fade-in">
             <path d="m273.835,116.316c0-38.584-31.39-69.974-69.974-69.974-23.486,0-44.29,11.642-56.988,29.446-5.7-1.215-11.6-1.884-17.641-1.953-5.787-30.073-32.286-52.867-64.022-52.867-35.958,3.55271e-15-65.21,29.253-65.21,65.21 0,27.13 16.658,50.435 40.279,60.246-1.053,5.482-1.611,11.137-1.611,16.921 0,49.363 40.16,89.522 89.522,89.522 41.754,0 76.92-28.734 86.77-67.466 33.327-5.336 58.875-34.278 58.875-69.085zm-145.645,126.551c-43.849,0-79.522-35.674-79.522-79.522s35.674-79.522 79.522-79.522 79.522,35.674 79.522,79.522-35.673,79.522-79.522,79.522zm-66.78-211.771c28.011-1.885 51.985,17.263 57.703,43.183-14.305,1.447-27.625,6.275-39.148,13.671 0-0.793-0.643-1.436-1.436-1.436h-5.478l10.905-21.868c1.989-3.989-0.912-8.678-5.37-8.678-2.275,0-4.354,1.287-5.37,3.323l-8.007,16.058-8.007-16.058c-1.015-2.036-3.095-3.323-5.37-3.323-4.458,0-7.359,4.689-5.37,8.678l10.905,21.868h-3.774c-1.734,0-3.139,1.406-3.139,3.139v0.116c0,1.734 1.406,3.139 3.139,3.139h19.4c-1.233,0.968-2.437,1.97-3.617,3h-15.783c-1.734,0-3.139,1.406-3.139,3.139 0,1.734 1.406,3.139 3.139,3.139h9.284c-0.918,0.98-1.815,1.98-2.689,3l-.979,1.157c-7.304,8.824-12.95,19.067-16.458,30.247-20.083-8.982-33.866-29.603-32.68-53.244 1.392-27.741 23.622-50.384 51.339-52.25zm155.566,120.747c0.597,0.053 1.192,0.084 1.784,0.084 2.215,0 4.447-0.369 6.822-1.128 0.153-0.049 0.305-0.099 0.456-0.15 2.861-0.965 4.246-4.208 3-6.958l-.682-1.506c-1.1-2.428-3.845-3.645-6.383-2.831l-.04,.013c-2.356,0.752-3.986,0.752-6.346,0-0.408-0.13-0.832-0.288-1.263-0.457-1.948-6.859-4.7-13.383-8.14-19.469h5.406c2.001,0 3.623-1.622 3.623-3.623 0-2.001-1.622-3.623-3.623-3.623h-9.971c-2.551-3.65-5.364-7.104-8.416-10.33-0.006-0.013-0.011-0.026-0.017-0.039-0.318-6.571 4.936-12.019 11.439-12.019 4.967,0 9.206,3.179 10.789,7.609 0.835,2.337 3.116,3.844 5.597,3.844 4.109,0 7.079-4.064 5.686-7.93-3.258-9.041-11.923-15.523-22.073-15.523-9.841,0-18.28,6.095-21.755,14.706-7.661-5.928-16.304-10.643-25.641-13.854 11.607-14.346 29.677-23.259 49.745-22.238 30.856,1.57 55.733,26.861 56.823,57.737 1.041,29.508-19.368,54.517-46.818,60.669 0.484-3.761 0.734-7.594 0.734-11.484 0.001-3.895-0.251-7.734-0.736-11.5z"></path>
             <path d="m114.665,181.796c0-3.361-2.725-6.087-6.087-6.087-3.361,0-6.087,2.725-6.087,6.087 0,12.073 8.371,22.223 19.612,24.964v3.271c0,3.361 2.725,6.087 6.087,6.087 3.362,0 6.087-2.725 6.087-6.087v-3.271c11.241-2.741 19.612-12.891 19.612-24.964s-8.371-22.222-19.612-24.964v-26.322c4.406,2.232 7.439,6.795 7.439,12.062 0,3.361 2.725,6.087 6.087,6.087s6.087-2.725 6.087-6.087c0-12.073-8.371-22.223-19.612-24.964v-3.271c0-3.361-2.725-6.087-6.087-6.087-3.362,0-6.087,2.725-6.087,6.087v3.271c-11.241,2.741-19.612,12.891-19.612,24.964s8.371,22.223 19.612,24.964v26.322c-4.406-2.232-7.439-6.794-7.439-12.062zm27.051,0c0,5.268-3.033,9.83-7.439,12.062v-24.124c4.405,2.232 7.439,6.795 7.439,12.062zm-27.051-39.224c0-5.267 3.033-9.83 7.439-12.062v24.124c-4.406-2.232-7.439-6.794-7.439-12.062z"></path>
           </svg>
 
-          <div class="pricing-card-container pricing-card-container--pg4-s1">
+          <div class="pricing-card-container pricing-card-container--pg4-s1" data-animate="slide-up">
             <div class="pricing-card">
               <h3>Once off</h3>
 
@@ -300,7 +303,7 @@
 
         <div class="wrapper wrapper--mobile-S">
 
-          <div class="footer-flex-container">
+          <div class="footer-flex-container" data-animate="slide-up">
             <div class="footer__image-text-block">
               <img src="assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
