--- a/html/privacy.html
+++ b/html/privacy.html
@@ -33,9 +33,10 @@
     <link rel="stylesheet" href="css/style-pages.css">
     <link rel="preload" href="css/dark-mode.css" as="style">
     <link rel="stylesheet" href="css/dark-mode.css">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script src="js/swup.js" defer></script>
     <script src="js/gsap.min.js"></script>
+    <script src="js/scrolltrigger.min.js"></script>
+    <script src="js/swup.js" defer></script>
+    <script type="module" src="js/glide.min.js" defer></script>
     <script type="module" src="js/script.js" defer></script>
     <noscript>
       <link rel="stylesheet" href="css/style.css">
