--- a/html/services.html
+++ b/html/services.html
@@ -241,7 +241,7 @@
           </div>
 
           <ul class="services-card-container" role="list">
-            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast">
+            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="0 0 482.229 482.229" aria-hidden="true">
@@ -256,7 +256,7 @@
               <p class="cards-text cards-text--pg3-s2">We design your website for mobile first, so we can ensure it looks great and works smoothly on every possible device. By keeping the code clean and lightweight, your site loads faster and gives visitors a better experience, whether they are on a phone, tablet, or computer.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast">
+            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="0 0 512 512" aria-hidden="true">
@@ -280,7 +280,7 @@
               <p class="cards-text cards-text--pg3-s2">Slow websites lose visitors. According to studies, potentially up to half of them, if your website takes more than 4 seconds to load. Our sites are built for speed, typically loading in under 1 second, so your customers will get to your website without any frustrating delays.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast">
+            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="0 0 256 256" aria-hidden="true">
@@ -296,7 +296,7 @@
               <p class="cards-text cards-text--pg3-s2">Accessibility matters and we make it a priority from day one. With an accessibility specialist on our team, every website we build is designed to be inclusive and easy to navigate for everyone. That means smooth keyboard navigation, screen-reader support, and thoughtful design choices that make your site welcoming to all users, regardless of ability.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast">
+            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible>
 
               <div class="services-card__svg-box">
                 <svg fill="#000000" height="43px" width="43px" viewBox="0 0 512.00 512.00">
@@ -308,7 +308,7 @@
               <p class="cards-text cards-text--pg3-s2">We offer websites with full multi-lingual support, making it easy to connect with your ideal audience, no matter where they are from. Reaching people in their native language helps your business feel more approachable and expands your reach in a meaningful way. You can provide the translated content yourself, or we can handle the translations for you.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast">
+            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="-51.2 -51.2 614.40 614.40" aria-hidden="true">
@@ -323,7 +323,7 @@
               <p class="cards-text cards-text--pg3-s2">Need help managing your social media? We've got you covered. Our in-house social media manager can handle everything across all major social media channels. She will keep your content fresh, regularly updated, and of the highest quality, helping to grow your business and expand your reach across the social media landscape.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast">
+            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible>
 
               <div class="services-card__svg-box">
                 <svg height="40" width="40" viewBox="0 0 512 512" aria-hidden="true">
