--- a/html/pricing.html
+++ b/html/pricing.html
@@ -142,7 +142,7 @@
             </svg>
           </div>
 
-          <div class="pricing-card-container pricing-card-container--pg4-s1">
+          <div class="pricing-card-container pricing-card-container--pg4-s1 transition-reverse-slide">
             <div class="pricing-card" data-animate="slide-left" data-reversible>
               <h3>Once off</h3>
 
