--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
             <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5" id="s5-pricing">Affordable Packages for Any Business</h2>
           </div>
 
-          <div class="pricing-card-container">
+          <div class="pricing-card-container" data-animate="slide-up" data-reversible>
             <div class="pricing-card">
               <h3>Once off</h3>
 
