--- a/html/about.html
+++ b/html/about.html
@@ -175,8 +175,8 @@
       <!--------------------------------------- PAGE 2 / SECTION-TWO / PORTFOLIO ----------------------------------->
       <!------------------------------------------------------------------------------------------------------------>
 
-      <section class="pg1-s4-portfolio pg2-s2-portfolio transition-reverse-slide" aria-labelledby="s2-portfolio" data-animate="slide-up">
-        <div class="wrapper wrapper--mobile-L">
+      <section class="pg1-s4-portfolio pg2-s2-portfolio" aria-labelledby="s2-portfolio" data-animate="slide-up">
+        <div class="wrapper wrapper--mobile-L transition-reverse-slide">
 
           <span class="cmp-topper-heading">Our Portfolio</span>
           <h2 class="cmp-sub-heading" id="s2-portfolio">Showcasing our previous work</h2>
@@ -213,8 +213,8 @@
       <!--------------------------------------- PAGE 2 / SECTION-THREE / TESTIMONIALS ------------------------------>
       <!------------------------------------------------------------------------------------------------------------>
 
-      <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3 transition-reverse-slide" aria-labelledby="s3-testimonials" data-animate="slide-up">
-        <div class="wrapper">
+      <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3" aria-labelledby="s3-testimonials" data-animate="slide-up">
+        <div class="wrapper transition-reverse-slide">
           <span class="cmp-topper-heading">Our Testimonials</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6" id="s3-testimonials">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
