--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
             <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5" id="s5-pricing">Affordable Packages for Any Business</h2>
           </div>
 
-          <div class="pricing-card-container" data-animate="slide-up" data-reversible>
-            <div class="pricing-card">
+          <div class="pricing-card-container">
+            <div class="pricing-card" data-animate="slide-up" data-reversible>
               <h3>Once off</h3>
 
               <ul role="list">
@@ -565,7 +565,7 @@
               <a class="cmp-main-btn" href="./html/contact.html">Start Now</a>
             </div>
 
-            <div class="pricing-card">
+            <div class="pricing-card" data-animate="slide-up" data-reversible>
               <h3>Monthly</h3>
 
               <ul role="list">
