--- a/html/services.html
+++ b/html/services.html
@@ -144,15 +144,15 @@
               <div>
                 <h3 class="services-page-sub-heading">Why Custom Code Makes a Difference</h3>
                 <ul class="cmp-main-text services-page-list">
-                  <li data-animate="slide-left"><strong>⚡ Lightning-Fast Load Times</strong><br>
+                  <li data-animate="slide-left" data-no-scrub><strong>⚡ Lightning-Fast Load Times</strong><br>
                     Our websites load almost instantly. No unnecessary plugins or scripts slowing things down—just optimized, minimal code that gives your visitors a smooth, fast experience. And when a site loads quickly, users are more likely to stick around.</li>
-                  <li data-animate="slide-right"><strong>🔐 Stronger Security</strong><br>
+                  <li data-animate="slide-right" data-no-scrub><strong>🔐 Stronger Security</strong><br>
                     Without platforms like WordPress or third-party plugins, there are no entry points for hackers. Our websites do not rely on databases or backend systems vulnerable to attacks, only static HTML, CSS and Javascript. That means no risk of your website ever being hacked.</li>
-                  <li data-animate="slide-left"><strong>♿ Built with Accessibility in Mind</strong><br>
+                  <li data-animate="slide-left" data-no-scrub><strong>♿ Built with Accessibility in Mind</strong><br>
                     Because we hand-code every website, we are able to follow accessibility best practices from the start. That means clean and semantic code, screen-reader navigation, keyboard navigation, dark color scheme and clear contrast choices. All of this makes your site more usable for everyone, regardless of their ability.</li>
-                  <li data-animate="slide-right"><strong>📈 Better SEO & Rankings</strong><br>
+                  <li data-animate="slide-right" data-no-scrub><strong>📈 Better SEO & Rankings</strong><br>
                     Google loves fast, well-built websites. When your site scores high on Google’s Core Web Vitals and PageSpeed Insights, it’s more likely to rank higher in search results. A faster, more stable site also means users stay longer and engage more with the site, all key signals Google looks for.</li>
-                  <li data-animate="slide-left"><strong>🗺️ Boosts Your Local Presence</strong><br>
+                  <li data-animate="slide-left" data-no-scrub><strong>🗺️ Boosts Your Local Presence</strong><br>
                     Sites built with performance in mind help improve your visibility in local searches, especially your Google Business Profile and Maps listings. This makes it easier for nearby customers to find and trust your business.</li>
                 </ul>
               </div>
@@ -160,19 +160,19 @@
               <div>
                 <h3 class="services-page-sub-heading sub-heading--longer-underline">Social Media Helps Drive Results</h3>
                 <ul class="cmp-main-text services-page-list">
-                  <li data-animate="slide-right"><strong>📷 Photo-Based Updates</strong><br>
+                  <li data-animate="slide-right" data-no-scrub><strong>📷 Photo-Based Updates</strong><br>
                     We can help keep your social media presence active by taking and sharing photos of your work or business. It's a low-effort way to stay visible online without the need for a full strategy.</li>
-                  <li data-animate="slide-left"><strong>🎨 Editing & Posting</strong><br>
+                  <li data-animate="slide-left" data-no-scrub><strong>🎨 Editing & Posting</strong><br>
                     Image editing and posting is handled for you. No complex content plans or scheduling tools. Just clean, beautiful on-brand posts shared directly to platforms such as Instagram, TikTok or Facebook.</li>
-                  <li data-animate="slide-right"><strong>🤝 Extra Support When You Need It</strong><br>
+                  <li data-animate="slide-right" data-no-scrub><strong>🤝 Extra Support When You Need It</strong><br>
                     We are here if you would like a little help maintaining a presence online. A bonus add-on to help support and keep your social media active while looking lively and professional.</li>
                 </ul>
               </div>
 
               <div>
                 <h3 class="services-page-sub-heading sub-heading--longer-underline">A Smarter Investment for Your Business</h3>
-                <p class="cmp-main-text" data-animate="slide-up">In todays competitive digital space, you need every advantage to stand out. While others are stuck with slow, bloated and generic websites, you can offer your visitors a custom-built experience that’s fast, secure, and uniquely yours.</p><br>
-                <p class="cmp-main-text" data-animate="slide-up">And because we handle everything from design and development to ongoing upkeep and maintenance, you can focus on what matters the most: running your business.</p>
+                <p class="cmp-main-text">In todays competitive digital space, you need every advantage to stand out. While others are stuck with slow, bloated and generic websites, you can offer your visitors a custom-built experience that’s fast, secure, and uniquely yours.</p><br>
+                <p class="cmp-main-text">And because we handle everything from design and development to ongoing upkeep and maintenance, you can focus on what matters the most: running your business.</p>
               </div>
             </div>
 
@@ -241,7 +241,7 @@
           </div>
 
           <ul class="services-card-container" role="list">
-            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible>
+            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible data-no-scrub>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="0 0 482.229 482.229" aria-hidden="true">
@@ -256,7 +256,7 @@
               <p class="cards-text cards-text--pg3-s2">We design your website for mobile first, so we can ensure it looks great and works smoothly on every possible device. By keeping the code clean and lightweight, your site loads faster and gives visitors a better experience, whether they are on a phone, tablet, or computer.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible>
+            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible data-no-scrub>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="0 0 512 512" aria-hidden="true">
@@ -280,7 +280,7 @@
               <p class="cards-text cards-text--pg3-s2">Slow websites lose visitors. According to studies, potentially up to half of them, if your website takes more than 4 seconds to load. Our sites are built for speed, typically loading in under 1 second, so your customers will get to your website without any frustrating delays.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible>
+            <li class="services-card services-card--pg3-s2" data-animate="slide-left-fast" data-reversible data-no-scrub>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="0 0 256 256" aria-hidden="true">
@@ -296,7 +296,7 @@
               <p class="cards-text cards-text--pg3-s2">Accessibility matters and we make it a priority from day one. With an accessibility specialist on our team, every website we build is designed to be inclusive and easy to navigate for everyone. That means smooth keyboard navigation, screen-reader support, and thoughtful design choices that make your site welcoming to all users, regardless of ability.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible>
+            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible data-no-scrub>
 
               <div class="services-card__svg-box">
                 <svg fill="#000000" height="43px" width="43px" viewBox="0 0 512.00 512.00">
@@ -308,7 +308,7 @@
               <p class="cards-text cards-text--pg3-s2">We offer websites with full multi-lingual support, making it easy to connect with your ideal audience, no matter where they are from. Reaching people in their native language helps your business feel more approachable and expands your reach in a meaningful way. You can provide the translated content yourself, or we can handle the translations for you.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible>
+            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible data-no-scrub>
 
               <div class="services-card__svg-box">
                 <svg height="50" width="50" viewBox="-51.2 -51.2 614.40 614.40" aria-hidden="true">
@@ -323,7 +323,7 @@
               <p class="cards-text cards-text--pg3-s2">Need help managing your social media? We've got you covered. Our in-house social media manager can handle everything across all major social media channels. She will keep your content fresh, regularly updated, and of the highest quality, helping to grow your business and expand your reach across the social media landscape.</p>
             </li>
 
-            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible>
+            <li class="services-card services-card--pg3-s2" data-animate="slide-right-fast" data-reversible data-no-scrub>
 
               <div class="services-card__svg-box">
                 <svg height="40" width="40" viewBox="0 0 512 512" aria-hidden="true">
